--- a/.github/workflows/trigger_azdo_pr.yml
+++ b/.github/workflows/trigger_azdo_pr.yml
@@ -1,7 +1,10 @@
 name: Trigger AzDO PR pipeline
 
 on:
-  push:
+  workflow_dispatch:
+  pull_request:
+    branches:
+      - main
 
 jobs:
   trigger-azdo-tests:
