--- a/.github/workflows/trigger_azdo_pr.yml
+++ b/.github/workflows/trigger_azdo_pr.yml
@@ -16,12 +16,6 @@ jobs:
         run: |
           echo "BUILD_REF=${{ github.event.pull_request.head.sha }}" >> $GITHUB_ENV
           echo "REPO_URL=${{ github.server_url }}/${{ github.event.pull_request.head.repo.full_name }}.git" >> $GITHUB_ENV
-          curl -sS -u :${{ secrets.CFC_TOKEN }} \
-          -H "Content-Type: application/json" \
-          -X POST \
-          -d '{"definition":{"id":29888},"parameters":"{}"}' \
-          "https://dev.azure.com/ni/DevCentral/_apis/build/builds?api-version=7.1"
-
       - name: Set variables for manual run
         if: ${{ github.event_name == 'workflow_dispatch' }}
         run: |
@@ -30,8 +24,8 @@ jobs:
       - name: Trigger Main
         uses: Azure/pipelines@v1.2
         with:
-          azure-devops-project-url: "https://dev.azure.com/ni/DevCentral"
-          azure-pipeline-name: "test-rtos-nile-pr-pipeline"
+          azure-devops-project-url: "https://dev.azure.com/ni/Users"
+          azure-pipeline-name: "cfuentes-pipelines"
           azure-devops-token: ${{ secrets.CFC_TOKEN }}
           azure-pipeline-variables: >
             {"BUILD_REF":"${{ env.BUILD_REF }}","REPO_URL":"${{ env.REPO_URL }}"}
